	  As described and discussed, defining remote variables
	  (injecting variables into remote bundles) is dangerous and must
	  be blocked. However, using a dot-separated common prefix for
	  variables raises no security concerns and can be considered
	  valid. (CFE-1915)
	- Classes failsafe_fallback and bootstrap_mode are now reported by default

	Bug fixes:
	- Disallow modifications of variables from a remote bundle (CFE-1915)
	- Speedup evalution by not copying variables table when expanding a promise
	  (CFE-2524)
	- Resolve subkey conflicts when converting to JSON
	  Whenever there is a conflict of array variable definitions prefer
	  the container subkeys over simple values when converting to JSON
	  (CFE-2536)
	- Do not ignore meta promises in server bundles (CFE-2066)
	- Add a debug log for computed class in splayclass
	- Don't error when calling isexecutable on broken link (CFE-741)
	- Fix segfault when no show-evaluated-vars/classes is specified
	- Fix memory leak in cf-execd, triggered when sending email failed (CFE-2712)
	- Fix IPv6 parsing to be un-reversed (CFE-2580)
	- Fix bug preventing permission changes on Unix sockets (CFE-1782)
	- Fix storage mount promise when existing mountpoint has a similar path
	  (CFE-1960)
	- Fix segfault when cf-promises -p is called against a file with syntax
	  errors (CFE-2696)
	- Fix rare cf-execd hang (CFE-2719)
	- Fix mergedata segfault when called on a non-container (CFE-2704)
	- Do not segfault if policy_server.dat only contains whitespaces and/or line breaks
	- Fix segfault on JSON policy files with no bundles and bodies (CFE-2754)
	- Prevent systemv script from managing processes inside other containers
	  (ENT-3800)
	- We must start on line position 1 instead of 0 to support the @if
	  macros on line 1 in a file. (CFE-2817)
	- Do not iterate over JSON objects' properties in mustache (CFE-2125)
	- Bundle name is now part of the log message when aborting a bundle
	  (CFE-2793)


3.11.0:
	New Features: